// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with major and minor version in the navigator 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 732,
  "screenWidth": 412,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with major, minor and patch version in the navigator 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 732,
  "screenWidth": 412,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with only a major version in the navigator 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 732,
  "screenWidth": 412,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should set the default toolbar height when the toolbar height will become negative 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 732,
  "screenWidth": 412,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 24,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should set the dimensions properly for a device in landscape mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 732,
  "screenWidth": 732,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 24,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 104,
    "width": 412,
    "x": 0,
    "y": 628,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should set the dimensions properly for a table in landscape mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 1024,
  "screenWidth": 1024,
  "sideBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "statusAddressBar": Object {
    "height": 24,
    "width": 1024,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 140,
    "width": 1024,
    "x": 0,
    "y": 628,
  },
}
`;
